style: center owner details and break token to avoid overflow

--- a/src/components/Main.css
+++ b/src/components/Main.css
@@ -31,7 +31,7 @@
     }
 
     .details-container {
-        margin-left: -8px;
+        margin-left: 0px;
     }
 
     .name-hyper {
@@ -41,22 +41,9 @@
     .name-container {
         font-size: 2rem;
     }
+
+    .owner-token {
+        word-break: break-all;
+        text-align: center;
+    }
 }
-
-
-/* @media screen and (max-width: 1100px) {
-    .header   {
-      flex-direction: column;
-    }
-    .searchBar {
-        margin:20px 0px;
-    }
-    .searchInput {
-        flex: 1;
-        min-width: 300px;
-        margin: 9px;
-    }
-    .loginButton button {
-        width: 88px;
-    }
-  } */
