--- a/src/components/PunkList.css
+++ b/src/components/PunkList.css
@@ -6,7 +6,7 @@
         align-items: center;
     }
 
-    .last-punk {
-        margin-right: 20px;
+    .remain-card {
+        margin-left: 20px;
     }
 }
